--- a/examples/crd.yaml
+++ b/examples/crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: storagequeues.azure.microsoft.com
+  name: azurequeues.azure.microsoft.com
 spec:
   group: azure.microsoft.com
   versions:
@@ -10,9 +10,9 @@ spec:
     storage: true
   scope: Cluster
   names:
-    plural: storagequeues
-    singular: storagequeue
-    kind: StorageQueue
+    plural: azurequeues
+    singular: azurequeue
+    kind: AzureQueue
     shortNames:
-    - azsq
+    - azq
   
